[package]
name = "xch-keygen"
version = "0.0.1"
description = "A very simple cli tool for offline generation of BLS keys for use with the chia-blockchain. It derives all the chia things, including hardened addresses."
authors = ["Abraham Sewill <abraham.sewill@proton.me"]
license = "MIT"
edition = "2024"


[dependencies]
bech32 = "0.11.0"
bip39 = "2.2.0"
chia = "0.29.0"
chia-protocol = "0.30.0"
chia-puzzle-types = "0.30.0"
chia-puzzles = "0.20.2"
clap = { version = "4.5.47", features = ["derive"] }
hex = "0.4.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
