[package]
name = "xch-keygen"
version = "0.0.4"
description = "A very simple cli tool for offline generation of BLS keys for use with the chia-blockchain. It derives all the chia things, including hardened addresses."
authors = ["Abraham Sewill <abraham.sewill@proton.me"]
license = "MIT"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
bech32 = "0.11.0"
bip39 = { version = "2.2.0", features = ["all-languages"]}
chia = "0.29.0"
chia-protocol = "0.30.0"
chia-puzzles = "0.20.2"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
native-tls = "0.2.14"
rand = "0.9.2"
rand_chacha = "0.9.0"
sage-api = { git = "https://github.com/xch-dev/sage", tag = "v0.12.1", version = "0.12.1" }
sage-client = { git = "https://github.com/xch-dev/sage", tag = "v0.12.1", version = "0.12.1" }
serde = "1.0.226"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = "1.47.1"
tungstenite = { version = "0.27.0", features = ["native-tls", "webpki-roots"] }
